tests/snapshots/run_convert_command_errors_when_no_extension_and_no_format.snap
---
source: tests/cli.rs
expression: content
---
an error happened: unable to find data format because the input file 'data' has no extension. Specify the data format using the '--format' option
