tests/snapshots/run_convert_command_on_json_file_stdout.snap
---
source: tests/cli.rs
expression: content
---
return{property=true}

[2m[32msuccessfully converted data.json[0m [2m(in {{DURATION}})[0m
