tests/snapshots/run_convert_command_on_json_without_extension_file_with_output.snap
---
source: tests/cli.rs
expression: content
---
[2m[32msuccessfully converted data[0m [2m(in {{DURATION}})[0m
