tests/snapshots/run_minify_verbose_command.snap
---
source: tests/cli.rs
expression: content
---
successfully minified 1 file (in {{DURATION}})

 INFO > successfully processed `src/init.lua`
 INFO > executed work in {{DURATION}}
