tests/snapshots/run_process_verbose_command.snap
---
source: tests/cli.rs
expression: content
---
successfully processed 1 file (in {{DURATION}})

 INFO > using default configuration
 INFO > successfully processed `src\init.lua`
 INFO > executed work in {{DURATION}}

